syntax = "proto3";
package basicService.v1;

option go_package = "github.com/LXJ0000/tok/backend/basicService/api/basicService/v1;v1";

import "basicService/v1/common.proto";

// 手机号和邮箱至少要存在一个
message RegisterRequest {
  string mobile = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  Metadata meta = 1;
  int64 account_id = 2; // 账户id，通过此id绑定跨平台账号
}

// 手机号、邮箱、账户id三者至少要存在一个
message CheckAccountRequest {
  string mobile = 1;
  string email = 2;
  int64 account_id = 3;
  string password = 4;
}

message CheckAccountResponse {
  Metadata meta = 1;
  int64 account_id = 2; // 账户id，通过此id绑定跨平台账号
}

enum VoucherType {
  VOUCHER_PHONE = 0;
  VOUCHER_EMAIL = 1;
}

message BindRequest {
  int64 account_id = 1;
  VoucherType voucher_type = 2;
  string voucher = 3;
}

message BindResponse {
  Metadata meta = 1;
}

message UnbindRequest {
  int64 account_id = 1;
  VoucherType voucher_type = 2;
  string voucher = 3;
}

message UnbindResponse {
  Metadata meta = 1;
}

service AccountService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc CheckAccount(CheckAccountRequest) returns (CheckAccountResponse);
  rpc Bind(BindRequest) returns (BindResponse);
  rpc Unbind(UnbindRequest) returns (UnbindResponse);
}
